[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Level01.gd" type="Script" id=1]
[ext_resource path="res://Assets/Gui/base_gui.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Sprites/Tiles/Level01.tres" type="TileSet" id=3]

[node name="level_root" type="Node"]
script = ExtResource( 1 )

[node name="level" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="level"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1

[node name="Spawn1" type="Position2D" parent="level"]
position = Vector2( 0, -1 )

[node name="Spawn2" type="Position2D" parent="level"]
position = Vector2( 0, -1 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 2
offset = Vector2( 512, 288 )
current = true
limit_smoothed = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="gui" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Button" type="Button" parent="CanvasLayer/gui"]
margin_left = 10.0
margin_top = 10.0
margin_right = 217.0
margin_bottom = 40.0
text = "Back to menu :("
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="button_up" from="CanvasLayer/gui/Button" to="." method="_on_Button_button_up"]
